# IoT-Replay-Defense-Simulator

./: .dockerignore  .github_contrib_refresh  .gitignore  .markdownlint.json  AUTHORSHIP.md  CHANGELOG.md  CITATION.cff  CODE_STATISTICS.md  Dockerfile  EXPERIMENTAL_PARAMETERS_CH.md  EXPERIMENTAL_PARAMETERS_EN.md  EXPERIMENTAL_PARAMETERS_JP.md  LOGO_DESIGN_GUIDE.md  PRESENTATION_CH.md  PRESENTATION_EN.md  PRESENTATION_JP.md  PROJECT_VISIBILITY_GUIDE.md  README.md  README_CH.md  README_JP.md  README_OPTIMIZATION_SUMMARY.md  api.py  build_website.sh  gui.py  main.py  pyproject.toml  regenerate_all_data.sh  requirements.txt  sitecustomize.py  start_app.sh  test_anchors.md  如何证明项目所有权.md
.devcontainer/: devcontainer.json
docs/: Hardware_Experiment_Manual_CH.md  PROJECT_STATUS.md  metrics_tables.md  simulation_manual.md
gui/: __init__.py  app.py  theme.py  translations.py  widgets.py
gui_legacy/: widgets.py
physical_experiment/: 22AJ603.tex  README.md  REAL_HARDWARE_RUNBOOK.md  runtime.py
presets/: garage_door.yaml  industrial_relay.yaml  low_power_sensor.yaml  smart_lock.yaml  toy_robot.yaml
replay/: __init__.py
results/: p_loss_sweep.json  p_reorder_sweep.json  test_p.json  test_w.json  window_sweep.json
scripts/: attacker_relay.py  clean_repo.sh  export_tables.py  gen_engine_baseline.py  generate_architecture_diagram.py  generate_ppt.py  gnuradio_adapter.py  hardware_experiment.py  plot_analytic_vs_mc.py  plot_asr_vs_loss.py  plot_lar_vs_reorder.py  plot_results.py  plot_security_cost_frontier.py  run_sweeps.py
sim/: __init__.py  attacker.py  channel.py  (+8 more)
(+237 files in other folders)
