[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "replay"
version = "0.2.0"
description = "ReplayBench-IoT research-grade replay-defense benchmark"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.100.0",
  "pydantic>=2.0.0",
  "PyYAML>=6.0",
  "uvicorn>=0.20.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "matplotlib>=3.8",
  "mypy>=1.10.0",
  "numpy>=1.26",
  "pyzmq>=25.0",
  "pytest>=7.0.0",
  "ruff>=0.6.0",
  "types-PyYAML>=6.0.12",
]
crypto = ["ascon>=1.3"]
figures = ["matplotlib>=3.8"]

[project.scripts]
replay = "replay.cli.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = [
  ".claude",
  ".serena",
  ".venv",
  "gui",
  "physical_experiment",
  "scripts",
  "web/node_modules",
  "web/.next",
  "web/out",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.9"
mypy_path = "src"
warn_unused_configs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
